--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serverless-alexa-skills",
+  "name": "@solvis/serverless-alexa-skills",
   "version": "0.1.0",
   "description": "Manage your Alexa Skills with Serverless Framework",
   "main": "index.js",
